kubernetes/apps/default/hindsight/app/httproute-ui.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hindsight
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  hostnames:
    - ui.hindsight.hades.casa
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: hindsight-control-plane
          port: 3000
